; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_bridge/extr_bridge_addrs.c_bridge_addrs_bif_insert.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_bridge/extr_bridge_addrs.c_bridge_addrs_bif_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tp_entries = type { i32 }
%struct.tp_entry = type { i32 }

@tp_e = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tp_entries*, %struct.tp_entry*, %struct.tp_entry**)* @bridge_addrs_bif_insert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bridge_addrs_bif_insert(%struct.tp_entries* %0, %struct.tp_entry* %1, %struct.tp_entry** %2) #0 {
  %4 = alloca %struct.tp_entries*, align 8
  %5 = alloca %struct.tp_entry*, align 8
  %6 = alloca %struct.tp_entry**, align 8
  %7 = alloca %struct.tp_entry*, align 8
  store %struct.tp_entries* %0, %struct.tp_entries** %4, align 8
  store %struct.tp_entry* %1, %struct.tp_entry** %5, align 8
  store %struct.tp_entry** %2, %struct.tp_entry*** %6, align 8
  %8 = load %struct.tp_entry**, %struct.tp_entry*** %6, align 8
  %9 = load %struct.tp_entry*, %struct.tp_entry** %8, align 8
  %10 = icmp ne %struct.tp_entry* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load %struct.tp_entries*, %struct.tp_entries** %4, align 8
  %13 = load %struct.tp_entry*, %struct.tp_entry** %5, align 8
  %14 = load %struct.tp_entry**, %struct.tp_entry*** %6, align 8
  %15 = call i32 @bridge_addrs_insert_at(%struct.tp_entries* %12, %struct.tp_entry* %13, %struct.tp_entry** %14)
  br label %38

16:                                               ; preds = %3
  %17 = load %struct.tp_entries*, %struct.tp_entries** %4, align 8
  %18 = load %struct.tp_entry*, %struct.tp_entry** %5, align 8
  %19 = getelementptr inbounds %struct.tp_entry, %struct.tp_entry* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call %struct.tp_entry* @bridge_addrs_find_pos(%struct.tp_entries* %17, i32 %20)
  store %struct.tp_entry* %21, %struct.tp_entry** %7, align 8
  %22 = load %struct.tp_entry*, %struct.tp_entry** %7, align 8
  %23 = icmp eq %struct.tp_entry* %22, null
  br i1 %23, label %24, label %29

24:                                               ; preds = %16
  %25 = load %struct.tp_entries*, %struct.tp_entries** %4, align 8
  %26 = load %struct.tp_entry*, %struct.tp_entry** %5, align 8
  %27 = load i32, i32* @tp_e, align 4
  %28 = call i32 @TAILQ_INSERT_HEAD(%struct.tp_entries* %25, %struct.tp_entry* %26, i32 %27)
  br label %35

29:                                               ; preds = %16
  %30 = load %struct.tp_entries*, %struct.tp_entries** %4, align 8
  %31 = load %struct.tp_entry*, %struct.tp_entry** %7, align 8
  %32 = load %struct.tp_entry*, %struct.tp_entry** %5, align 8
  %33 = load i32, i32* @tp_e, align 4
  %34 = call i32 @TAILQ_INSERT_AFTER(%struct.tp_entries* %30, %struct.tp_entry* %31, %struct.tp_entry* %32, i32 %33)
  br label %35

35:                                               ; preds = %29, %24
  %36 = load %struct.tp_entry*, %struct.tp_entry** %5, align 8
  %37 = load %struct.tp_entry**, %struct.tp_entry*** %6, align 8
  store %struct.tp_entry* %36, %struct.tp_entry** %37, align 8
  br label %38

38:                                               ; preds = %35, %11
  ret void
}

declare dso_local i32 @bridge_addrs_insert_at(%struct.tp_entries*, %struct.tp_entry*, %struct.tp_entry**) #1

declare dso_local %struct.tp_entry* @bridge_addrs_find_pos(%struct.tp_entries*, i32) #1

declare dso_local i32 @TAILQ_INSERT_HEAD(%struct.tp_entries*, %struct.tp_entry*, i32) #1

declare dso_local i32 @TAILQ_INSERT_AFTER(%struct.tp_entries*, %struct.tp_entry*, %struct.tp_entry*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
